tests/netconvert/import/XML/errors/broken_edge/edge#priority__false1/errors.netconvert
Error: Attribute 'priority' in definition of edge '1' Invalid Number Format (long long integer format) a.
Quitting (on error).
